# piku

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PIKU.md  README.md  justfile
.github/: settings.yml
.github/workflows/: ci.yml  live-llm.yml
crates/piku/: Cargo.toml
crates/piku-api/: Cargo.toml
crates/piku-api/src/: anthropic.rs  custom.rs  error.rs  groq.rs  lib.rs  ollama.rs  openai_compat.rs  openrouter.rs  provider.rs  sse.rs  tests.rs  types.rs
crates/piku-runtime/: Cargo.toml
crates/piku-runtime/src/: agent_loop.rs  agents.rs  compact.rs  embed_memory.rs  hooks.rs  lib.rs  memory.rs  permission.rs  prompt.rs  provider.rs  session.rs  task.rs  tests.rs
crates/piku-runtime/src/embed_memory/: backend.rs
crates/piku-runtime/tests/: e2e.rs
crates/piku-tools/: Cargo.toml
crates/piku-tools/src/: attempt_tree_tool.rs  bash.rs  edit_file.rs  embed_memory_tool.rs  glob.rs  grep.rs  lib.rs  list_dir.rs  memory_tool.rs  read_file.rs  spawn_agent.rs  tests.rs  tool_search.rs  write_file.rs
crates/piku/examples/: key_debug.rs  test_input.rs
crates/piku/src/: cli.rs  config.rs  input_helper.rs  lib.rs  main.rs  markdown.rs  repl.rs  self_update.rs  trace.rs  tui_repl.rs
crates/piku/tests/: agentic_user.rs  binary_tests.rs  dogfood.rs  input_integration.rs  llm_e2e.rs  rendering.rs  self_update_e2e.rs  test_helpers.rs  tui_formatting.rs  tui_output.rs  tui_smoke.rs  vt100_rendering.rs
crates/piku/tests/agentic/: checks.rs  memory.rs  mod.rs  pty.rs  terminal.rs  types.rs  workspace.rs
docs/: design.md  deterministic-agent-loop-coverage-design.md  dogfood-ledger-design.md  embed-backend-config-design.md  embed-memory-module-split-design.md  live-dogfood-roadmap.md  live-failure-promotion-design.md  live-failure-promotions.md  live-llm-matrix-design.md  provider-resolution-design.md  repo-artifact-dogfood-design.md  self-update.md  trace-backed-dogfood-design.md
docs/adr/: 0001-runtime-owned-provider-resolution.md  0002-explicit-embed-backend-config.md  0003-split-embed-memory-modules.md  0004-deterministic-agent-loop-coverage.md  0005-live-llm-matrix.md  0006-live-dogfood-ledger.md  0007-live-failure-promotion.md  0008-repo-artifact-dogfood-corpus.md  README.md  _template.md
scripts/: ci.sh  dogfood.sh  github-corpus-prompt-selftest.sh  github-corpus-prompt.sh  github-corpus-run-selftest.sh  github-corpus-run.sh  github-corpus.sh
tests/fixture/: Cargo.toml  PIKU.md  README.md
tests/fixture/src/: lib.rs  main.rs  parser.rs  stats.rs  utils.rs
