[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# http
reqwest = { version = "0.12", features = ["stream", "json"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# error handling
thiserror = "1"
anyhow = "1"

# file/process utilities
glob = "0.3"
regex = "1"
walkdir = "2"

# TUI
crossterm = "0.28"
syntect = { version = "5", default-features = false, features = [
  "default-syntaxes",
  "default-themes",
  "parsing",
  "regex-fancy",
] }

# Unicode
unicode-segmentation = "1"
unicode-width = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
