[package]
name = "piku-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tokio = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-stream = "0.3"

[lints]
workspace = true
