[package]
name = "piku-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tokio = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
piku-api = { path = "../piku-api" }
piku-tools = { path = "../piku-tools" }

[dev-dependencies]
async-stream = "0.3"
tempfile = "3"
tokio = { workspace = true }

[lints]
workspace = true
