[package]
name = "piku-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
piku-api = { path = "../piku-api" }

[lints]
workspace = true
