[package]
name = "piku"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "piku"
path = "src/main.rs"

[lib]
name = "piku"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
self-replace = "1"
thiserror = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
piku-api = { path = "../piku-api" }
piku-tools = { path = "../piku-tools" }
piku-runtime = { path = "../piku-runtime" }
crossterm = { workspace = true }
syntect = { workspace = true }

[dev-dependencies]
async-stream = "0.3"
rexpect = "0.7"

[lints]
workspace = true
