[package]
name = "piku"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "piku"
path = "src/main.rs"

[lib]
name = "piku"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
self-replace = "1"
thiserror = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
piku-api = { path = "../piku-api" }
piku-tools = { path = "../piku-tools" }
piku-runtime = { path = "../piku-runtime" }
crossterm = { workspace = true }
syntect = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
libc = "0.2"

[dev-dependencies]
async-stream = "0.3"
nix = { version = "0.31", features = ["fs", "term", "signal"] }
rexpect = "0.7"
serial_test = "3"
tempfile = "3"
vt100 = "0.16"

[lints]
workspace = true
